crates/qubit-macros/tests/ui/attribute-handler-kind-duplicated.stderr
error: handler kind has already been provided
 --> tests/ui/attribute-handler-kind-duplicated.rs:3:18
  |
3 | #[handler(query, query)]
  |                  ^^^^^
