crates/qubit-macros/tests/ui/attribute-handler-kind-duplicated.rs
use qubit_macros::handler;

#[handler(query, query)]
async fn my_handler() {}

fn main() {}
